[gd_scene load_steps=19 format=3 uid="uid://c24mndo3ygyxr"]

[ext_resource type="Script" uid="uid://b5h0almlrcssw" path="res://Main.gd" id="1"]
[ext_resource type="Shader" uid="uid://b3a8bln20y6q5" path="res://anchor.gdshader" id="2_cm0pq"]
[ext_resource type="Shader" uid="uid://v3nsaril4234" path="res://camera_plane2.gdshader" id="2_fos0i"]
[ext_resource type="Script" uid="uid://7bbab7nvdus5" path="res://camera_plane.gd" id="3_3dxm6"]
[ext_resource type="Shader" uid="uid://c38xgnbcwof1q" path="res://test.gdshader" id="3_r0du0"]
[ext_resource type="Material" uid="uid://c5oxndmf0jbu3" path="res://test_materials/marble.tres" id="6_03owx"]
[ext_resource type="PackedScene" uid="uid://bm0p0ox5aufyb" path="res://models/godot_ball.blend" id="6_lgr22"]
[ext_resource type="Material" uid="uid://djut62ilojfmq" path="res://test_materials/dark_wood.tres" id="6_trn2v"]
[ext_resource type="Material" uid="uid://bbfkhkmct7wu3" path="res://test_materials/blue.tres" id="6_wkp8b"]
[ext_resource type="Material" uid="uid://cg7l6w2h0aq22" path="res://test_materials/aluminium.tres" id="7_wkp8b"]

[sub_resource type="Environment" id="1"]
background_mode = 5
ambient_light_source = 2
ambient_light_color = Color(0.30139, 0.301389, 0.30139, 1)
ambient_light_sky_contribution = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3dxm6"]
render_priority = 0
shader = ExtResource("2_fos0i")
shader_parameter/feed_transform = Projection(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_cm0pq"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fos0i"]
render_priority = 0
shader = ExtResource("2_cm0pq")

[sub_resource type="PlaneMesh" id="9"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cm0pq"]
render_priority = 0
shader = ExtResource("3_r0du0")

[sub_resource type="SphereMesh" id="SphereMesh_r0du0"]

[sub_resource type="Environment" id="Environment_uu6xs"]
background_mode = 1
background_color = Color(0.735099, 0.735099, 0.735099, 1)
ambient_light_source = 2
ambient_light_color = Color(0.30139, 0.301389, 0.30139, 1)
ambient_light_sky_contribution = 0.0

[node name="Main" type="Node3D"]
script = ExtResource("1")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
environment = SubResource("1")
current = true
fov = 65.0
near = 0.1
far = 500.0

[node name="background" type="MeshInstance3D" parent="XROrigin3D/XRCamera3D"]
material_override = SubResource("ShaderMaterial_3dxm6")
mesh = SubResource("QuadMesh_cm0pq")
script = ExtResource("3_3dxm6")

[node name="GodotBalls" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)

[node name="Test" type="MeshInstance3D" parent="GodotBalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5)
visible = false
material_override = SubResource("ShaderMaterial_fos0i")
mesh = SubResource("9")

[node name="godot_ball" parent="GodotBalls" instance=ExtResource("6_lgr22")]

[node name="OBJ_GodotBall" parent="GodotBalls/godot_ball" index="0"]
surface_material_override/0 = ExtResource("6_wkp8b")

[node name="godot_ball4" parent="GodotBalls" instance=ExtResource("6_lgr22")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0597792, 0, -0.190196)

[node name="OBJ_GodotBall" parent="GodotBalls/godot_ball4" index="0"]
surface_material_override/0 = ExtResource("7_wkp8b")

[node name="godot_ball2" parent="GodotBalls" instance=ExtResource("6_lgr22")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.167982, 0, -0.0698861)

[node name="OBJ_GodotBall" parent="GodotBalls/godot_ball2" index="0"]
surface_material_override/0 = ExtResource("6_03owx")

[node name="godot_ball3" parent="GodotBalls" instance=ExtResource("6_lgr22")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.136318, 0, -0.0664466)

[node name="OBJ_GodotBall" parent="GodotBalls/godot_ball3" index="0"]
surface_material_override/0 = ExtResource("6_trn2v")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="GodotBalls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.215242, 0)
visible = false
material_override = SubResource("ShaderMaterial_cm0pq")
mesh = SubResource("SphereMesh_r0du0")

[node name="toggle_plane_detection" type="Button" parent="."]
offset_right = 164.0
offset_bottom = 34.0
scale = Vector2(2, 2)
text = "Plane detection on"

[node name="Info" type="Label" parent="."]
offset_left = 2.0
offset_top = 87.0
offset_right = 505.0
offset_bottom = 147.0
scale = Vector2(2, 2)
text = "FPS"

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.929256, -0.191188, 0.316118, 0.0133232, 0.872462, 0.4885, -0.369196, -0.44973, 0.813288, 0, 0.302984, 0)
shadow_enabled = true
shadow_bias = 0.01
directional_shadow_max_distance = 25.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uu6xs")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="toggle_plane_detection" to="." method="_on_toggle_plane_detection"]

[editable path="GodotBalls/godot_ball"]
[editable path="GodotBalls/godot_ball4"]
[editable path="GodotBalls/godot_ball2"]
[editable path="GodotBalls/godot_ball3"]
